# PyTorch

./: .gitignore  README.md  california_housing_pre_dataset.py  create_inits.sh  linner.py  linner.py.bak.20250820-232006  main.py  my-memo.txt  preprocess_dataset_setup_and_show.py  pyproject.toml  pytorch_predata_cache.py  requirements.txt  test_maybe.py  train_classifier.py
djangoapp/: manage.py
djangoapp/mlapp/: apps.py  urls.py  views.py
djangoapp/mlapp/management/commands/: train_classifier.py  train_regression.py
djangoapp/mlsite/: asgi.py  settings.py  urls.py  wsgi.py
docs/: PREPROCESSING.md
src/mlmini/: __init__.py  cli.py
src/mlmini/classification/: __init__.py  data.py  evaluation.py  infer.py  modeling.py  outputs.py  train.py
src/mlmini/regression/: __init__.py  data.py  data.py.bak.20250820-233218  infer.py  train.py
src/mlmini/utils/: __init__.py  file_io.py  logging_utils.py  utilities_common.py  visualization.py
utils/cuda/: device_use_validate.py
utils/lib_conf/: logging_conf.py  matplotlib_conf.py  numpy_conf.py
utils/path/: dir_items_count.py  root_abspath_setting.py
utils/predata/: image_dataloader.py  model_factory.py  pytorch_predata_cache.py
utils/struct/: split_data.py
utils/train/: early_stopping.py  image_classification.py
utils/visualize/: image_classification.py  plot_barh_weight.py  plot_ideal_line.py  plot_img_list.py
